# worldcup-predictions

./: .gitignore  README.md  docker-compose.yml  update_instructions.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  worldcup2026_matches.json  worldcup2026_teams.json
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: __init__.py  base.py  leaderboard.py  match.py  party.py  prediction.py  tournament.py  user.py
backend/app/routers/: admin.py  auth.py  matches.py  parties.py  predictions.py  tournaments.py  users.py
backend/app/schemas/: auth.py  match.py  party.py  prediction.py  tournament.py  user.py
backend/app/services/: leaderboard_service.py  match_service.py  party_service.py  prediction_service.py  scoring_service.py
backend/app/workers/: fixture_sync.py  football_api_client.py  make_admin.py  ops.py  populate_wc2026_matches.py  populate_wc2026_teams.py  score_sync.py  seed.py  seed_test_data.py  sync_worker.py  update_match_kickoff.py
backend/migrations/: env.py
backend/migrations/versions/: 0f15b0829b0c_initial_schema.py  a1b2c3d4e5f6_add_default_prediction_stage.py  b2c3d4e5f6a7_add_is_admin_to_users.py  c3d4e5f6a7b8_add_predictions_open_to_matches.py  d4e5f6a7b8c9_set_wc2026_status_active.py  e5f6a7b8c9d0_knockout_advancing_scoring.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_matches.py  test_parties.py  test_predictions.py  test_sync_worker.py
backend/tests/integration/: conftest.py  test_auth_cognito.py  test_health.py  test_match_with_teams.py  (+4 more)
(+76 files in other folders)
