[project]
name = "worldcup-predictions-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "mangum>=0.19",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis[asyncio]>=5.0",
    "python-jose[cryptography]>=3.3",
    "boto3>=1.34",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "uvicorn[standard]>=0.30",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "factory-boy>=3.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
